	[+] Added Task::loggingToConsoleLoggerEnabled() and setLoggingToConsoleEnabled().
	[+] Added TaskManager::forwardTaskMessagesToConsoleEngine() and setForwardTaskMessagesToConsoleEngine(). Previously 
	    forwarding of task messages to the console was controlled by TaskManager::forwardTaskMessagesToQtMsgEngine().

	[#] Expose busyStateChanged() from private class on QtilitiesCoreApplication and QtilitiesApplication.
    [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now protected slots, allowing
        subclasses to reimplement its functionality. Also, bunch of improvements internally in QtilitiesProcess and
        detailed documentation how messages from the backend process are buffered was added. 
	[#] Improved error reporting in QtilitiesProcess. When the working directory of the process does not exist, it will 
	    tell you this instead of telling you that the executable does not exist when the process fails 
		with QProcess::FailedToStart.
		
    [#] Changed debug messages in Observer's destructor to trace messages.
    [#] QtilitiesProperty is now properly documented.
    [#] Moved registration of Logger::MessageType and Logger::MessageContext from ITask to Logger's constructor.
    [#] FileUtils::makeLocalCopyOfResource() will also create the local_path directory using QDir::mkpath() if it does not exist.
    [#] FileUtils::makeLocalCopyOfResource()'s errorMsg parameter is no longer compulsory.
    [#] Assign default -1 value to Task::lastErrorMessages()'s count parameter.
	[#] When expanding/collapsing nodes in ObserverWidget, a busy cursor will be set on the ObserverWidget. 
	    For big trees, there might be a slight delay which requires this.

    [*] Fixed bug in Observer::handle_deletedSubject() where application can sometimes
        crash with "Detected QWeakPointer creation in a QObject being deleted".